# carbon-planner-handsoff

./: .gitignore  ARCHITECTURE.md  README.md  SECURITY.md  SOFTWARE_STANDARDS.md  pyproject.toml
.github/workflows/: ci.yml
backend/src/carbon_planner/: __init__.py
backend/src/carbon_planner.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/tests/: test_smoke.py
docs/: README.md  local-setup.md
frontend/: README.md
infra/: README.md
